# Solar

./: .gitignore  FORMAL_PROPOSAL.md  PROJECT_PITCH.md  README.md  calculator.py  geo.py  pyproject.toml
solar_recommender/: requirements.txt
solar_recommender/app/agents/: data_prep_agent.py  geo_agent.py  marketplace_agent.py  qa_agent.py  recommendation_agent.py  sizing_agent.py  super_agent.py
solar_recommender/app/api/: main.py
solar_recommender/app/api/endpoints/: chat.py
solar_recommender/app/core/: db_connector.py  llm_clients.py
solar_recommender/data/knowledge_base/: .gitkeep
solar_recommender/data/processed/: .gitkeep
solar_recommender/data/raw/: .gitkeep  appliances.csv
solar_recommender/ml_models/: __init__.py
solar_recommender/ml_models/notebooks/: 01_data_exploration.ipynb
solar_recommender/ml_models/saved_models/: .gitkeep
solar_recommender/ml_models/scripts/: evaluate.py  train.py
solar_recommender/prototyping/: prototype_app.py
solar_recommender/tests/: test_agents.py  test_api.py
