[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "solar_recommender"
version = "0.1.0"
authors = [
  { name="Jules", email="jules@example.com" },
]
description = "AI-Powered Solar Recommendation Platform"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["solar_recommender*"]
exclude = ["tests*"]
